name:                pure-shadows
version:             0.8.0.0
homepage:            purehs.org/doc/pure-shadows
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-shadows.git

library
  exposed-modules:
      Pure.Shadows

  build-depends:
    base,
    pure-styles,
    pure-txt

  hs-source-dirs:      src
  default-language:    Haskell2010
